[project]
name = "investment-analysis-agent"
version = "0.1.0"
description = "Deep Research Agent for comprehensive company investment analysis and research report generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.0.5",
    "langchain-google-genai>=3.2.0",
    "langgraph-cli[inmem]>=0.4.2",
    "tavily-python>=0.7.12",
    "python-dotenv>=1.0.0",
    "markdown-pdf", 
]